# self_edu_django

./: .env.sample  pyproject.toml
config/: settings.py  urls.py
edu_app/: admin.py  models.py  urls.py  views.py
edu_app/migrations/: 0001_initial.py  0002_initial.py
edu_app/templates/edu_app/: base.html  chapter_list.html
edu_app/templates/edu_app/includes/: inc_menu.html
users/: forms.py  models.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  new_password.html  register.html  user_form.html  verification.html
